--- a/app/views/bookings/index.html.erb
+++ b/app/views/bookings/index.html.erb
@@ -8,23 +8,29 @@
         <% @user_bookings.each do |booky| %>
         <%state = State.find(booky.offer.state_id)%>
         <%country = Countrie.find(state.countrie_id)%>
-        <div class="card my-4">
-          <div class="card-header">
-            <h4><%= booky.user.name.capitalize %></h4>
-          </div>
-          <div class="card-body">
-            <blockquote class="blockquote mb-0">
-            <%costo_vuelo = booky.offer.cost%>
-            <%costo_tarifa = booky.rate.cost%>
-            <%total_costo = costo_tarifa + costo_vuelo%>
-            <p style="font-size:18px;">Destino: <%=country.name%>, <%= state.name %></p>
-            <p style="font-size:18px;">Fecha del salida: <%= booky.fec_ini %></p>
-            <p style="font-size:18px;">Fecha del retorno: <%= booky.fec_end %></p>
-            <p style="font-size:18px;">Tarifa elegida: <%= booky.rate.name %></p>
-            <p style="font-size:18px;">Costo de tarifa: <%= booky.rate.cost %>$</p>
-            <p style="font-size:18px;">Costo del vuelo: <span> <%= booky.offer.cost %>$</span></p>
-            <p style="font-size:18px;">Costo total: <span style="color:limegreen;"> <%= total_costo %>$</span></p>
-            </blockquote>
+        <%costo_vuelo = booky.offer.cost%>
+        <%costo_tarifa = booky.rate.cost%>
+        <%total_costo = costo_tarifa + costo_vuelo%>
+        <div class="list-group my-4">
+          <div class="list-group-item">
+            <div class="d-flex justify-content-between align-items-center">
+              <div>
+                <h3><%=state.name%>, <%= country.name %></h3>
+                <small>Aeropuerto Internacional de <%= country.name %></small>
+              </div>
+              <p style="font-size:18px;">Fecha del salida:<br><%= booky.fec_ini %></p>
+              <p style="font-size:18px;">Fecha del retorno:<br><%= booky.fec_end %></p>
+              <h5 style="font-weight: 800; color: red;">Tarifa <%= booky.rate.name %></h5>
+            </div>
+                <hr>
+              <h5><%= booky.user.name.capitalize %> <%= booky.user.last_name.capitalize %></h5>
+              <small>CI: <%= booky.user.id_number %></small>
+              <p>Número de asientos reservados: 1</p> <%# EDITAR AQUÍ NUEVA COLUMNA ASIENTOS RESERVADOS%>
+            <div class="d-flex justify-content-between">
+              <p style="font-size:18px;">Costo de tarifa:<br><%= booky.rate.cost %>$</p>
+              <p style="font-size:18px;">Costo del vuelo:<br><span> <%= booky.offer.cost %>$</span></p>
+              <p style="font-size:18px;">Total:<br><span style="font-size:22px; color:limegreen;"> <%= total_costo %>$</span></p>
+            </div>
           </div>
         </div>
         <% end %>
