--- a/app/views/bookings/edit.html.erb
+++ b/app/views/bookings/edit.html.erb
@@ -2,10 +2,10 @@
   <h1>Edita tu reserva</h1>
   <p>Ingresa los datos que vas a modificar</p>
   <%= simple_form_for [@booking] do |f| %>
-      <%= f.association :rate, label: "Tarifas" %>
-      <%= f.association :offer, label: "Ofertas" %>
-      <%= f.submit "Editar Booking", class: "btn btn-primary" %>
+      <%= f.input :fec_ini, as: :string, required: false, label: "Fecha de salida", input_html: {class: "datepicker"} %>
+      <%= f.input :fec_end, as: :string, required: false, label: "Fecha de retorno", input_html: {class: "datepicker"} %>
+      <%= f.submit "Editar fechas", class: "btn btn-primary" %>
     <% end %>
   <br>
-  <%= link_to "Volver", booking_path %>
+  <%= link_to "Volver", bookings_path %>
 </div>
